# tessa

./: .gitignore  README.md  docker-compose.yml
apps/web/: package-lock.json  package.json  tsconfig.tsbuildinfo
services/answer-eval-service/: .gitignore  Dockerfile  README.md  pyproject.toml
services/answer-eval-service/app/: __init__.py  main.py
services/answer-eval-service/questions/: cpp-small.json
services/chunking-service/: .dockerignore  Dockerfile  go.mod  go.sum
services/indexing-service/: .dockerignore  Dockerfile  go.mod  go.sum
services/query-service/: Dockerfile  README.md  pyproject.toml
services/query-service/app/: __init__.py  config.py  main.py
services/query-service/app/answering/: __init__.py  agentic_strategy.py  answering_strategy.py  baseline_strategy.py  llm_client.py  prompts.py  reasoning_strategy.py  service.py
services/query-service/app/context/: __init__.py  assembler.py  budget.py  citations.py  dedupe.py
services/query-service/app/models/: __init__.py  answer.py  chunk.py  context.py  query.py  retrieval.py
services/query-service/app/retrieval/: __init__.py  context_expansion.py  fusion.py  orchestrator.py  query_understanding.py
services/query-service/app/retrieval/retrievers/: __init__.py  base.py  graph.py  keyword.py  vector.py
services/query-service/app/stores/: __init__.py  elasticsearch.py  neo4j.py  openai.py  pinecone.py  postgres.py
services/query-service/tests/: test_app.py  test_llm_client.py  test_retrieval_mapping.py
services/repo-sync-service/: .dockerignore  Dockerfile  README.md  go.mod  go.sum
(+80 files in other folders)
