[project]
name = "tessa-answer-eval-service"
version = "0.1.0"
description = "Evaluation runner for comparing Tessa RAG answer strategies."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "matplotlib>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
